회원가입 DB에 저장, 로그인 검증과정, RANKING 구성중...

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     implementation 'org.mybatis:mybatis:3.5.16'
     implementation 'org.slf4j:slf4j-api:2.0.13'
     implementation 'ch.qos.logback:logback-classic:1.5.6'
-
+    implementation 'org.mindrot:jbcrypt:0.4'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
